# Learn_FastAPI

./: Dockerfile  entrypoint.sh  pyproject.toml
fast_hero/: app.py  database.py  models.py  schemas.py  security.py
fast_hero/routes/: auth.py  todos.py  user.py
migrations/: env.py
migrations/versions/: 13f4bf663a8f_create_todos_table.py  5f806bd50f3b_create_users_table.py
tests/: config_test.py  conftest.py  test_app.py  test_auth.py  test_todos.py  test_user.py  teste_db.py  teste_security.py
